# mcp-postgres-oidc

./: .env.example  .gitignore  README.md  ROADMAP.md  claude_desktop_config.example.json  docker-compose.yml  up.sh
docs/: AUTH_FLOW.md  PORTFOLIO.md  PORTFOLIO_HANDOFF.md
docs/examples/: audit-log.md
experiments/pg18-oauth/: Dockerfile  README.md  TARGET_FLOW.md  demo_full_hop.sh  docker-compose.yml  gen_certs.sh  pg_oauth_client.py  setup_authz.sh  setup_exchange.sh
experiments/pg18-oauth/certs/: ca.crt  ca.key  kc.crt  kc.key
experiments/pg18-oauth/mcp_tier2/: PROOF.md  drive.py  pgwire.py  server.py
experiments/pg18-oauth/pg/: pg_hba.conf
experiments/pg18-oauth/pg/init/: 01_roles_grants.sql
experiments/pg18-oauth/realm/: pgoauth-realm.json
keycloak/: mcp-db-realm.json  realm.template.json
mcp_server/: Dockerfile  config.py  pyproject.toml  server.py
mcp_server/auth/: identity.py  oidc.py  pkce.py  routes.py
mcp_server/guardrails/: query_guard.py
mcp_server/masking/: engine.py
mcp_server/tools/: db_tools.py
postgres/init/: 01_schema.sql
scripts/: creds.sh  get_token.sh  import_realm.sh  seed.py  smoke_test.py
traefik/: dockerproxy.conf
