[project]
name = "mcp-postgres-oidc"
version = "0.1.0"
description = "PostgreSQL MCP Server with OIDC authentication, column masking, and query guardrails"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.0",
    "asyncpg>=0.29.0",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "uvicorn[standard]>=0.30.0",
    "sqlparse>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "faker>=25.0.0",
]
